--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ yarn-debug.log*
 yarn-error.log*
 
 .env
+
+/src/components/UserProfile/AnalysisCardContent.md
+/src/components/UserProfile/ProfileCardContent.md
