--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@atproto/oauth-client-node": "^0.2.4",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@vercel/edge": "^1.2.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "express-session": "^1.18.1",
@@ -27,9 +28,10 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
