--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       },
       {
         "src": "/(.*)",
-        "middlewarePath": "middleware/edge.js",
+        "middlewarePath": "/middleware/edge.js",
         "continue": true
       },
       {
