--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-grid-layout": "^1.5.0",
+    "react-helmet": "^6.1.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
