--- a/package.json
+++ b/package.json
@@ -12,26 +12,24 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge": "^1.2.1",
     "axios": "^1.7.9",
-    "cra-template": "1.2.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "matter-js": "^0.20.0",
-    "next": "^15.1.7",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-grid-layout": "^1.5.0",
     "react-helmet": "^6.1.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
-    "typescript": "^5.7.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,7 +54,6 @@
   },
   "proxy": "http://localhost:5001",
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "vite": "^6.1.1"
+    "cross-env": "^7.0.3"
   }
 }
