--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@atproto/oauth-client-node": "^0.2.4",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@supabase/supabase-js": "^2.48.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge": "^1.2.1",
     "axios": "^1.7.9",
