--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.5.0",
     "react-helmet": "^6.1.0",
+    "react-image-gallery": "^1.4.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
